# sabia

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  code-style.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  testing.md  tmp_probe.py
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
catalog/: index.html
changelog/: index.html
concepts/: index.html
contributing/: index.html
docs/: api.md  catalog.md  concepts.md
examples/: 01_quickstart.py  02_roles_and_adjustment.py  03_validation.py  04_registry.py  05_cross_sectional.py  06_normalize.py  07_manifest.py  08_intraday.py  README.md  _data.py
examples/notebooks/: 01_price_trend_oscillators.ipynb  02_volatility_clustering_and_estimators.ipynb  03_distribution_fat_tails.ipynb  04_momentum_meanreversion_crosssection.ipynb  05_normalization_and_stationarity.ipynb  README.md  _simulate.py  _stats.py
search/: search_index.json
src/sabia/: __init__.py  _expr.py  _math.py  _validate_params.py  calendar.py  cross_sectional.py  distribution.py  manifest.py  mean_reversion.py  microstructure.py  momentum.py  naming.py  normalize.py  params.py  recipes.py  references.py  registry.py  returns.py  schema.py  seasonality.py  spec.py  toolkit.py  trend.py  typing.py  validate.py  volatility.py  volume.py
src/sabia/adapters/: __init__.py  bars.py  signing.py
tests/: conftest.py  feature_manifest.py  synthetic.py  test_adapter_bars.py  test_adapter_signing.py  test_calibration.py  test_cross_sectional.py  test_degenerate.py  test_distribution.py  test_invariants.py  test_manifest.py  test_marketgoblin_regression.py  test_mean_reversion.py  test_microstructure.py  test_momentum.py  test_normalize.py  test_param_validation.py  test_perf.py  test_production_gates.py  test_registry.py  test_returns.py  test_roles.py  test_schema.py  test_seasonality.py  test_spec.py  test_toolkit.py  test_trend.py  test_validate.py  test_volatility.py  test_volume.py
tests/data/: generate_marketgoblin_fixture.py  marketgoblin_panel.parquet
