[project]
name = "sabia"
version = "0.1.0"
description = "Polars-native technical features for trading pipelines — pure, point-in-time, online-ready"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Antônio Salomão", email = "83646729+aexsalomao@users.noreply.github.com" }
]
keywords = ["finance", "features", "trading", "technical-analysis", "polars", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.13"
dependencies = [
    # Polars is pinned exactly: the §3.4 immutability / fingerprint guarantee depends on it.
    "polars==1.39.3",
    "numpy>=1.26",
    "quando",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://aexsalomao.github.io/sabia"
Documentation = "https://aexsalomao.github.io/sabia"
Repository = "https://github.com/aexsalomao/sabia"
Issues = "https://github.com/aexsalomao/sabia/issues"
Changelog = "https://github.com/aexsalomao/sabia/blob/master/CHANGELOG.md"

[tool.uv.sources]
quando = { path = "../quando", editable = true }

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run is the fast unit suite; calibration (integration) and benchmarks (slow) are separate
# gates, run explicitly with `pytest -m integration` / `pytest -m slow`.
addopts = "-m 'not slow and not integration'"
markers = [
    "integration: calibration / cross-subsystem tests (local fixture, no network)",
    "slow: performance benchmarks (pytest-benchmark)",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "B904", # raise-without-from-inside-except — sometimes intentional
]

[tool.ruff.lint.isort]
known-first-party = ["sabia"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.coverage.run]
source = ["sabia"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
